--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "arielmejiadev/larapex-charts": "^4.0",
+        "asantibanez/livewire-charts": "^2.4",
+        "barryvdh/laravel-dompdf": "^1.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
