--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/nexmo-notification-channel": "^2.5",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.8"
+        "livewire/livewire": "^2.8",
+        "santigarcor/laratrust": "^7.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
