--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tailwindcss": "^3.0.18"
     },
     "dependencies": {
+        "puppeteer": "^13.7.0",
         "turbolinks": "^5.2.0"
     }
 }
